# googley-eyes-transformer

./: LICENSE  README.md  makefile  pyproject.toml
api/: swagger.yaml
src/: __init__.py
src/app/: __init__.py  containers.py  routes.py  services.py
src/app/templates/: index.html
src/transformer/: eye_detector.py  eye_drawer.py  eye_segment.py  image_transformer.py  utils.py
tests/: __init__.py
tests/app/: test_transform_image_route.py
tests/transformer/: test_image_transformer.py
