[tool.poetry]
name = "image-modifier"
version = "0.1.0"
description = "Applies googley eyes to images."
authors = ["Ghassen"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.10.0.84"
numpy = "^2.0.0"
flask = "^3.0.3"
dependency-injector = "^4.41.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
